config/helm/rancher/rancher-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rancher
  namespace: cattle-system
  labels:
    app.kubernetes.io/name: rancher
spec:
  type: ClusterIP
  publishNotReadyAddresses: true
  ports:
    - name: http
      port: 8882  # Thay đổi cổng đây từ 80 sang 8080
      targetPort: 80
      protocol: TCP
    - name: https-internal
      port: 2443  # Thay đổi cổng đây từ 443 sang 8443
      targetPort: 444
      protocol: TCP
  selector:
    app.kubernetes.io/name: rancher
  sessionAffinity: None
